<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    tools:context="com.example.android.abnd03.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBack"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/netChal"
            android:textColor="@color/colorText1"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question1"
            android:textColor="@color/colorText2"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest1" />


        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q1ans1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans1a" />

            <RadioButton
                android:id="@+id/q1ans2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans1b" />

            <RadioButton
                android:id="@+id/q1ans3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans1c" />

            <RadioButton
                android:id="@+id/q1ans4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans1d" />
        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question2"
            android:textColor="@color/colorText2"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest2" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q2ans1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans2a" />

            <RadioButton
                android:id="@+id/q2ans2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans2b" />

            <RadioButton
                android:id="@+id/q2ans3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans2c" />

            <RadioButton
                android:id="@+id/q2ans4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans2d" />
        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3"
            android:textColor="@color/colorText2"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest3" />


        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q3ans1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans3a" />

            <RadioButton
                android:id="@+id/q3ans2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans3b" />

            <RadioButton
                android:id="@+id/q3ans3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans3c" />

            <RadioButton
                android:id="@+id/q3ans4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans3d" />
        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question4"
            android:textColor="@color/colorText2"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest4" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q4ans1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans4a" />

            <RadioButton
                android:id="@+id/q4ans2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans4b" />

            <RadioButton
                android:id="@+id/q4ans3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans4c" />

            <RadioButton
                android:id="@+id/q4ans4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans4d" />
        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question5"
            android:textColor="@color/colorText2"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest5" />

        <CheckBox
            android:id="@+id/q5ans1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ans5a" />

        <CheckBox
            android:id="@+id/q5ans2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ans5b" />

        <CheckBox
            android:id="@+id/q5ans3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ans5c" />

        <CheckBox
            android:id="@+id/q5ans4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ans5d" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question6"
            android:textColor="@color/colorText2"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest6" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q6ans1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans6a" />

            <RadioButton
                android:id="@+id/q6ans2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans6b" />

            <RadioButton
                android:id="@+id/q6ans3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans6c" />

            <RadioButton
                android:id="@+id/q6ans4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans6d" />
        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question7"
            android:textColor="@color/colorText2"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest7" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q7ans1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans7a" />

            <RadioButton
                android:id="@+id/q7ans2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans7b" />

            <RadioButton
                android:id="@+id/q7ans3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans7c" />

            <RadioButton
                android:id="@+id/q7ans4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans7d" />
        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question8"
            android:textColor="@color/colorText2"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest8" />

        <CheckBox
            android:id="@+id/q8ans1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ans8a" />

        <CheckBox
            android:id="@+id/q8ans2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ans8b" />

        <CheckBox
            android:id="@+id/q8ans3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ans8c" />

        <CheckBox
            android:id="@+id/q8ans4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ans8d" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question9"
            android:textColor="@color/colorText2"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest9" />

        <EditText
            android:id="@+id/q9ans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/submit_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:onClick="submit"
                android:text="@string/submit" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>



